--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
             <div class="full-mission-content">
                 <h3 class="full-mission-title">Our Mission</h3>
                 <p class="full-mission-text">
-                    LACE UP Foundation addresses the mental health crisis facing youth in urban communities 
-                    through a collaborative youth wellness and basketball initiative that combines basketball 
-                    culture, mental performance training, creative expression, and social-emotional learning 
-                    to equip young people with tools to navigate adversity, build resilience, and strengthen 
-                    their personal and community identity.
+                    LACE UP Foundation's mission is to empower the youth and build communities 
+                    through a collaborative youth wellness and basketball initiative that combines 
+                    basketball culture, mental performance training, creative expression, and 
+                    social-emotional learning to equip young people with tools to navigate adversity, 
+                    build resilience, and strengthen their personal and community identity.
                 </p>
             </div>
         </div>
