--- a/index.html
+++ b/index.html
@@ -256,8 +256,9 @@
                 <div class="impact-partnerships">
                     <h3>Community Partnerships</h3>
                     <p>
-                        We work hand-in-hand with schools, parks, recreation centers, and mental health 
-                        providers to create a comprehensive support network for youth in urban communities.
+                        We work hand-in-hand with schools, parks, and wellness advocates to wrap a 
+                        holistic circle of support around our youth, ensuring they have the resources 
+                        to thrive in every area of life.
                     </p>
                 </div>
             </div>
