--- a/index.html
+++ b/index.html
@@ -285,12 +285,12 @@
                 <div class="involvement-card">
                     <h3>Volunteer</h3>
                     <p>Share your time and talents. We need coaches, mentors, workshop leaders, and event support.</p>
-                    <a href="#contact" class="btn btn-primary">Volunteer Today</a>
+                    <a href="https://forms.gle/y9NCHDwp2FHCQbTYA" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Volunteer Today</a>
                 </div>
                 <div class="involvement-card">
                     <h3>Partner</h3>
                     <p>Organizations, schools, and businesses can partner with us to expand our reach and impact.</p>
-                    <a href="#contact" class="btn btn-primary">Become a Partner</a>
+                    <a href="https://forms.gle/WeH3TMb2AqRStEsL8" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Become a Partner</a>
                 </div>
             </div>
         </div>
@@ -325,7 +325,7 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form">
+                <form class="contact-form" action="mailto:ready2laceup@gmail.com" method="post" enctype="text/plain">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
