--- a/index.html
+++ b/index.html
@@ -280,17 +280,26 @@
                 <div class="involvement-card">
                     <h3>Donate</h3>
                     <p>Your financial support directly funds programs, equipment, and resources for youth in need.</p>
-                    <a href="#contact" class="btn btn-primary">Make a Donation</a>
+                    <a href="#contact" class="btn btn-primary">
+                        <span>Make a Donation</span>
+                        <div class="btn-glow"></div>
+                    </a>
                 </div>
                 <div class="involvement-card">
                     <h3>Volunteer</h3>
                     <p>Share your time and talents. We need coaches, mentors, workshop leaders, and event support.</p>
-                    <a href="https://forms.gle/y9NCHDwp2FHCQbTYA" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Volunteer Today</a>
+                    <a href="https://forms.gle/y9NCHDwp2FHCQbTYA" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                        <span>Volunteer Today</span>
+                        <div class="btn-glow"></div>
+                    </a>
                 </div>
                 <div class="involvement-card">
                     <h3>Partner</h3>
                     <p>Organizations, schools, and businesses can partner with us to expand our reach and impact.</p>
-                    <a href="https://forms.gle/WeH3TMb2AqRStEsL8" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Become a Partner</a>
+                    <a href="https://forms.gle/WeH3TMb2AqRStEsL8" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                        <span>Become a Partner</span>
+                        <div class="btn-glow"></div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -325,28 +334,17 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form" action="mailto:ready2laceup@gmail.com" method="post" enctype="text/plain">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" required>
+                <div class="contact-form">
+                    <div class="form-info">
+                        <h3>Ready to Connect?</h3>
+                        <p>Click the button below to send us an email directly, or use one of the contact methods on the left.</p>
                     </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject">Subject</label>
-                        <input type="text" id="subject" name="subject" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">
-                        <span>Send Message</span>
+                    <a href="mailto:ready2laceup@gmail.com?subject=LACE%20UP%20Foundation%20Inquiry" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
+                        <span>Email Us Now</span>
                         <div class="btn-glow"></div>
-                    </button>
-                </form>
+                    </a>
+                    <p style="text-align: center; margin-top: 1rem; opacity: 0.8;">Or reach out via our social media channels</p>
+                </div>
             </div>
         </div>
     </section>
