--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                         LACE UP Foundation transforms the basketball court into a sanctuary for healing and growth, 
                         giving youth what the world often denies them: A place to breathe, belong, and believe in what's possible.
                     </p>
+                    <p class="mission-text">
+                        LACE UP Foundation Inc. is a registered 501(c)(3) charitable nonprofit organization. Every gift you make is tax-deductible and goes directly toward empowering young people in our community.
+                    </p>
+                    <p class="mission-text" style="font-size: 0.9em; opacity: 0.75;">EIN: 82-0833087</p>
                 </div>
                 <div class="mission-visual">
                     <div class="stats-card">
@@ -318,7 +322,7 @@
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                             </svg>
-                            <a href="mailto:ready2laceup@gmail.com">ready2laceup@gmail.com</a>
+                            <a href="/cdn-cgi/l/email-protection#fe8c9b9f9a87cc929f9d9b8b8ebe99939f9792d09d9193"><span class="__cf_email__" data-cfemail="14667175706d26787577716164547379757d783a777b79">[email&#160;protected]</span></a>
                         </div>
                         <div class="contact-item">
                             <svg viewBox="0 0 24 24" fill="currentColor">
@@ -339,7 +343,7 @@
                         <h3>Ready to Connect?</h3>
                         <p>Click the button below to send us an email directly, or use one of the contact methods on the left.</p>
                     </div>
-                    <a href="mailto:ready2laceup@gmail.com?subject=LACE%20UP%20Foundation%20Inquiry" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
+                    <a href="/cdn-cgi/l/email-protection#dfadbabebba6edb3bebcbaaaaf9fb8b2beb6b3f1bcb0b2e0acaabdb5babcabe2939e9c9afaedef8a8ffaedef99b0aab1bbbeabb6b0b1faedef96b1aeaab6ada6" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
                         <span>Email Us Now</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -377,13 +381,4 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 LACE UP Foundation. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+           
