--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Archivo:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Givebutter Widget — LACE UP Foundation Inc. -->
+    <script
+      async
+      src="https://widgets.givebutter.com/latest.umd.cjs?acct=zgNVlgH0xxIPAX3n&p=other"
+    ></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -56,7 +62,7 @@
                         <span>Explore Programs</span>
                         <div class="btn-glow"></div>
                     </a>
-                    <a href="#get-involved" class="btn btn-secondary">
+                    <a href="https://givebutter.com/lace-up-foundation-inc" givebutter-widget="lace-up-foundation-inc" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
                         <span>Support Our Mission</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -284,7 +290,7 @@
                 <div class="involvement-card">
                     <h3>Donate</h3>
                     <p>Your financial support directly funds programs, equipment, and resources for youth in need.</p>
-                    <a href="#contact" class="btn btn-primary">
+                    <a href="https://givebutter.com/lace-up-foundation-inc" givebutter-widget="lace-up-foundation-inc" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
                         <span>Make a Donation</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -322,7 +328,7 @@
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                             </svg>
-                            <a href="/cdn-cgi/l/email-protection#fe8c9b9f9a87cc929f9d9b8b8ebe99939f9792d09d9193"><span class="__cf_email__" data-cfemail="14667175706d26787577716164547379757d783a777b79">[email&#160;protected]</span></a>
+                            <a href="mailto:ready2laceup@gmail.com">ready2laceup@gmail.com</a>
                         </div>
                         <div class="contact-item">
                             <svg viewBox="0 0 24 24" fill="currentColor">
@@ -343,7 +349,7 @@
                         <h3>Ready to Connect?</h3>
                         <p>Click the button below to send us an email directly, or use one of the contact methods on the left.</p>
                     </div>
-                    <a href="/cdn-cgi/l/email-protection#dfadbabebba6edb3bebcbaaaaf9fb8b2beb6b3f1bcb0b2e0acaabdb5babcabe2939e9c9afaedef8a8ffaedef99b0aab1bbbeabb6b0b1faedef96b1aeaab6ada6" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
+                    <a href="mailto:ready2laceup@gmail.com" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
                         <span>Email Us Now</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -374,7 +380,7 @@
                     <div class="footer-column">
                         <h4>Get Involved</h4>
                         <ul>
-                            <li><a href="#get-involved">Donate</a></li>
+                            <li><a href="https://givebutter.com/lace-up-foundation-inc" givebutter-widget="lace-up-foundation-inc" target="_blank" rel="noopener noreferrer">Donate</a></li>
                             <li><a href="#get-involved">Volunteer</a></li>
                             <li><a href="#get-involved">Partner</a></li>
                             <li><a href="#contact">Contact</a></li>
