--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Archivo:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-
-    <!-- Givebutter Widget — LACE UP Foundation Inc. -->
-    <script
-      async
-      src="https://widgets.givebutter.com/latest.umd.cjs?acct=zgNVlgH0xxIPAX3n&p=other"
-    ></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -30,6 +24,7 @@
             </button>
             <ul class="nav-menu">
                 <li><a href="#mission">Mission</a></li>
+                <li><a href="#story">Our Story</a></li>
                 <li><a href="#approach">Our Approach</a></li>
                 <li><a href="#impact">Impact</a></li>
                 <li><a href="#programs">Programs</a></li>
@@ -62,7 +57,7 @@
                         <span>Explore Programs</span>
                         <div class="btn-glow"></div>
                     </a>
-                    <a href="https://givebutter.com/lace-up-foundation-inc" givebutter-widget="lace-up-foundation-inc" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
+                    <a href="#get-involved" class="btn btn-secondary">
                         <span>Support Our Mission</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -86,8 +81,7 @@
                         When young people strengthen their minds and bodies, they strengthen their futures.
                     </p>
                     <p class="mission-text">
-                        LACE UP Foundation transforms the basketball court into a sanctuary for healing and growth, 
-                        giving youth what the world often denies them: A place to breathe, belong, and believe in what's possible.
+                        LACE UP Foundation Inc. is a collaborative youth wellness and career-pathway initiative designed to address the unique challenges facing young people across communities. Our mission is to strengthen the mental, emotional, and physical wellness of our youth by merging the power of athletics, performance science, and creative self-expression into a transformative, community-centered experience. We empower our youth to build the character, confidence, and transferable skills necessary to navigate adversity and lead with purpose in every arena of life.
                     </p>
                     <p class="mission-text">
                         LACE UP Foundation Inc. is a registered 501(c)(3) charitable nonprofit organization. Every gift you make is tax-deductible and goes directly toward empowering young people in our community.
@@ -125,10 +119,29 @@
                 <h3 class="full-mission-title">Our Mission</h3>
                 <p class="full-mission-text">
                     LACE UP Foundation's mission is to empower the youth and build communities 
-                    through a collaborative youth wellness and basketball initiative that combines 
-                    basketball culture, mental performance training, creative expression, and 
+                    through a collaborative youth wellness and sports initiative that combines 
+                    sports culture, mental performance training, creative expression, and 
                     social-emotional learning to equip young people with tools to navigate adversity, 
                     build resilience, and strengthen their personal and community identity.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Founder's Story -->
+    <section id="story" class="full-mission">
+        <div class="container">
+            <div class="full-mission-content">
+                <span class="section-label">Our Story</span>
+                <h3 class="full-mission-title">Founded on $100 and a Vision</h3>
+                <p class="full-mission-text">
+                    In 2016, Brooke Thomas started LACE UP Foundation Inc. with just $100, money from a college refund check and an unshakeable belief that young people deserved more. That first investment turned into $3,000 over a single three-day tournament weekend, proving that when you invest in youth, the community shows up.
+                </p>
+                <p class="full-mission-text" style="margin-top: 1.2rem;">
+                    What began as a local movement has grown into a statewide catalyst for youth development. Over nearly a decade, LACE UP has provided bookbags, school supplies, scholarships, and resources to young people who need them most, while hosting community events that bring neighborhoods together. The Foundation's reach has extended beyond the youth it directly serves: three small businesses have opened brick-and-mortar locations, fueled by the visibility and momentum LACE UP created.
+                </p>
+                <p class="full-mission-text" style="margin-top: 1.2rem;">
+                    At the heart of it all is the <strong>"Field to Life"</strong> model, translating the discipline, resilience, and teamwork learned on the court into the professional excellence demanded by today's tech and business economy. Because for Brooke, and for LACE UP, the game has always been about far more than basketball.
                 </p>
             </div>
         </div>
@@ -290,7 +303,7 @@
                 <div class="involvement-card">
                     <h3>Donate</h3>
                     <p>Your financial support directly funds programs, equipment, and resources for youth in need.</p>
-                    <a href="https://givebutter.com/lace-up-foundation-inc" givebutter-widget="lace-up-foundation-inc" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    <a href="#contact" class="btn btn-primary">
                         <span>Make a Donation</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -328,12 +341,11 @@
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                             </svg>
-                            <a href="mailto:ready2laceup@gmail.com">ready2laceup@gmail.com</a>
+                            <a href="/cdn-cgi/l/email-protection#5c2e393d38256e303d3f39292c1c3b313d3530723f3331"><span class="__cf_email__" data-cfemail="2f5d4a4e4b561d434e4c4a5a5f6f48424e4643014c4042">[email&#160;protected]</span></a>
                         </div>
                         <div class="contact-item">
                             <svg viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-                            </svg>
+                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.3                            </svg>
                             <a href="https://facebook.com/ready2laceup" target="_blank" rel="noopener noreferrer">facebook.com/ready2laceup</a>
                         </div>
                         <div class="contact-item">
@@ -349,7 +361,7 @@
                         <h3>Ready to Connect?</h3>
                         <p>Click the button below to send us an email directly, or use one of the contact methods on the left.</p>
                     </div>
-                    <a href="mailto:ready2laceup@gmail.com" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
+                    <a href="/cdn-cgi/l/email-protection#e5978084819cd7898486809095a58288848c89cb868a88da9690878f808691d8a9a4a6a0c0d7d5b0b5c0d7d5a38a908b8184918c8a8bc0d7d5ac8b94908c979c" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
                         <span>Email Us Now</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -372,6 +384,7 @@
                         <h4>Quick Links</h4>
                         <ul>
                             <li><a href="#mission">Mission</a></li>
+                            <li><a href="#story">Our Story</a></li>
                             <li><a href="#approach">Our Approach</a></li>
                             <li><a href="#programs">Programs</a></li>
                             <li><a href="#impact">Impact</a></li>
@@ -380,11 +393,15 @@
                     <div class="footer-column">
                         <h4>Get Involved</h4>
                         <ul>
-                            <li><a href="https://givebutter.com/lace-up-foundation-inc" givebutter-widget="lace-up-foundation-inc" target="_blank" rel="noopener noreferrer">Donate</a></li>
+                            <li><a href="#get-involved">Donate</a></li>
                             <li><a href="#get-involved">Volunteer</a></li>
                             <li><a href="#get-involved">Partner</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
                 </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 LACE UP Foundation. All rights reserved.</p>
+                <p style="margin-top: 0.4rem; opacity: 0.7; font-size: 0.85em;">LACE UP Foundation Inc. is a 501(c)(3) charitable nonprofit &mdash; EIN: 82-0833087</p>
            
