--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <span>Explore Programs</span>
                         <div class="btn-glow"></div>
                     </a>
-                    <a href="#get-involved" class="btn btn-secondary">
+                    <a href="https://givebutter.com/lace-up-spring-jam-26" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
                         <span>Support Our Mission</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -135,7 +135,7 @@
                 <span class="section-label">Our Story</span>
                 <h3 class="full-mission-title">Founded on $100 and a Vision</h3>
                 <p class="full-mission-text">
-                    In 2016, Brooke Thomas started LACE UP Foundation Inc. with just $100, money from a college refund check and an unshakeable belief that young people deserved more. That first investment turned into $3,000 over a single three-day tournament weekend, proving that when you invest in youth, the community shows up.
+                    In 2016, Brooke Thomas started LACE UP Foundation Inc. with just $100, money from a college refund check and an unshakeable belief that young people deserved more. That first investment turned into $4000 over a single three-day tournament weekend, proving that when you invest in youth, the community shows up.
                 </p>
                 <p class="full-mission-text" style="margin-top: 1.2rem;">
                     What began as a local movement has grown into a statewide catalyst for youth development. Over nearly a decade, LACE UP has provided bookbags, school supplies, scholarships, and resources to young people who need them most, while hosting community events that bring neighborhoods together. The Foundation's reach has extended beyond the youth it directly serves: three small businesses have opened brick-and-mortar locations, fueled by the visibility and momentum LACE UP created.
@@ -303,7 +303,7 @@
                 <div class="involvement-card">
                     <h3>Donate</h3>
                     <p>Your financial support directly funds programs, equipment, and resources for youth in need.</p>
-                    <a href="#contact" class="btn btn-primary">
+                    <a href="https://givebutter.com/lace-up-spring-jam-26" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
                         <span>Make a Donation</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -341,11 +341,12 @@
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                             </svg>
-                            <a href="/cdn-cgi/l/email-protection#5c2e393d38256e303d3f39292c1c3b313d3530723f3331"><span class="__cf_email__" data-cfemail="2f5d4a4e4b561d434e4c4a5a5f6f48424e4643014c4042">[email&#160;protected]</span></a>
+                            <a href="mailto:ready2laceup@gmail.com">ready2laceup@gmail.com</a>
                         </div>
                         <div class="contact-item">
                             <svg viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.3                            </svg>
+                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                            </svg>
                             <a href="https://facebook.com/ready2laceup" target="_blank" rel="noopener noreferrer">facebook.com/ready2laceup</a>
                         </div>
                         <div class="contact-item">
@@ -361,7 +362,7 @@
                         <h3>Ready to Connect?</h3>
                         <p>Click the button below to send us an email directly, or use one of the contact methods on the left.</p>
                     </div>
-                    <a href="/cdn-cgi/l/email-protection#e5978084819cd7898486809095a58288848c89cb868a88da9690878f808691d8a9a4a6a0c0d7d5b0b5c0d7d5a38a908b8184918c8a8bc0d7d5ac8b94908c979c" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
+                    <a href="mailto:ready2laceup@gmail.com" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
                         <span>Email Us Now</span>
                         <div class="btn-glow"></div>
                     </a>
