--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <span class="section-label">Our Story</span>
                 <h3 class="full-mission-title">Founded on $100 and a Vision</h3>
                 <p class="full-mission-text">
-                    In 2016, Brooke Thomas started LACE UP Foundation Inc. with just $100, money from a college refund check and an unshakeable belief that young people deserved more. That first investment turned into $4000 over a single three-day tournament weekend, proving that when you invest in youth, the community shows up.
+                    In 2016, Brooke Thomas started LACE UP Foundation Inc. with just $100. Money from a college refund check and an unshakeable belief that young people deserved more. That first investment turned into $4000 over a single three-day tournament weekend, proving that when you invest in youth, the community shows up.
                 </p>
                 <p class="full-mission-text" style="margin-top: 1.2rem;">
                     What began as a local movement has grown into a statewide catalyst for youth development. Over nearly a decade, LACE UP has provided bookbags, school supplies, scholarships, and resources to young people who need them most, while hosting community events that bring neighborhoods together. The Foundation's reach has extended beyond the youth it directly serves: three small businesses have opened brick-and-mortar locations, fueled by the visibility and momentum LACE UP created.
