--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <span>Explore Programs</span>
                         <div class="btn-glow"></div>
                     </a>
-                    <a href="https://givebutter.com/lace-up-spring-jam-26" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
+                    <a href="https://givebutter.com/lace-up-foundation-inc" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
                         <span>Support Our Mission</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -83,7 +83,7 @@
                     <p class="mission-text">
                         LACE UP Foundation Inc. is a collaborative youth wellness and career-pathway initiative designed to address the unique challenges facing young people across communities. Our mission is to strengthen the mental, emotional, and physical wellness of our youth by merging the power of athletics, performance science, and creative self-expression into a transformative, community-centered experience. We empower our youth to build the character, confidence, and transferable skills necessary to navigate adversity and lead with purpose in every arena of life.
                     </p>
-                    <p class="mission-text">
+                    <p class="mission-text" style="margin-top: 1.5rem;">
                         LACE UP Foundation Inc. is a registered 501(c)(3) charitable nonprofit organization. Every gift you make is tax-deductible and goes directly toward empowering young people in our community.
                     </p>
                     <p class="mission-text" style="font-size: 0.9em; opacity: 0.75;">EIN: 82-0833087</p>
@@ -302,7 +302,7 @@
                 <div class="involvement-card">
                     <h3>Donate</h3>
                     <p>Your financial support directly funds programs, equipment, and resources for youth in need.</p>
-                    <a href="https://givebutter.com/lace-up-spring-jam-26" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    <a href="https://givebutter.com/lace-up-foundation-inc" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
                         <span>Make a Donation</span>
                         <div class="btn-glow"></div>
                     </a>
