--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                             </svg>
-                            <a href="/cdn-cgi/l/email-protection#fa889f9b9e83c8969b999f8f8aba9d979b9396d4999597"><span class="__cf_email__" data-cfemail="b7c5d2d6d3ce85dbd6d4d2c2c7f7d0dad6dedb99d4d8da">[email&#160;protected]</span></a>
+                            <a href="mailto:ready2laceup@gmail.com">ready2laceup@gmail.com</a>
                         </div>
                         <div class="contact-item">
                             <svg viewBox="0 0 24 24" fill="currentColor">
@@ -361,7 +361,7 @@
                         <h3>Ready to Connect?</h3>
                         <p>Click the button below to send us an email directly, or use one of the contact methods on the left.</p>
                     </div>
-                    <a href="/cdn-cgi/l/email-protection#8bf9eeeaeff2b9e7eae8eefefbcbece6eae2e7a5e8e4e6" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
+                    <a href="mailto:ready2laceup@gmail.com" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
                         <span>Email Us Now</span>
                         <div class="btn-glow"></div>
                     </a>
