--- a/index.html
+++ b/index.html
@@ -81,12 +81,8 @@
                         When young people strengthen their minds and bodies, they strengthen their futures.
                     </p>
                     <p class="mission-text">
-                        LACE UP Foundation Inc. is a collaborative youth wellness and career-pathway initiative designed to address the unique challenges facing young people across communities. Our mission is to strengthen the mental, emotional, and physical wellness of our youth by merging the power of athletics, performance science, and creative self-expression into a transformative, community-centered experience. We empower our youth to build the character, confidence, and transferable skills necessary to navigate adversity and lead with purpose in every arena of life.
+                        LACE UP Foundation Inc. is a 501(c)(3) nonprofit organization dedicated to empowering youth and building communities through a collaborative wellness and sports initiative.
                     </p>
-                    <p class="mission-text" style="margin-top: 1.5rem;">
-                        LACE UP Foundation Inc. is a registered 501(c)(3) charitable nonprofit organization. Every gift you make is tax-deductible and goes directly toward empowering young people in our community.
-                    </p>
-                    <p class="mission-text" style="font-size: 0.9em; opacity: 0.75;">EIN: 82-0833087</p>
                 </div>
                 <div class="mission-visual">
                     <div class="stats-card">
@@ -118,11 +114,7 @@
             <div class="full-mission-content">
                 <h3 class="full-mission-title">Our Mission</h3>
                 <p class="full-mission-text">
-                    LACE UP Foundation's mission is to empower the youth and build communities 
-                    through a collaborative youth wellness and sports initiative that combines 
-                    sports culture, mental performance training, creative expression, and 
-                    social-emotional learning to equip young people with tools to navigate adversity, 
-                    build resilience, and strengthen their personal and community identity.
+                    Our mission is to prepare the next generation to lead with purpose in every arena of life by combining sports culture, mental performance training, creative expression, and social-emotional learning to equip young people with tools to navigate adversity, build resilience, and strengthen their personal and community identity.
                 </p>
             </div>
         </div>
@@ -333,14 +325,13 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h2>Let's Connect</h2>
-                    <p>Ready to make a difference? Reach out to learn more about our programs, 
-                    partnership opportunities, or how you can support LACE UP Foundation.</p>
+                    <p>Join the LACE UP Movement. Whether you're a neighbor, a mentor, or a partner, there is a place for you here. Reach out to see how we can work together to support our youth and build a stronger community.</p>
                     <div class="contact-details">
                         <div class="contact-item">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                             </svg>
-                            <a href="mailto:ready2laceup@gmail.com">ready2laceup@gmail.com</a>
+                            <a href="/cdn-cgi/l/email-protection#2c5e494d48551e404d4f49595c6c4b414d4540024f4341"><span class="__cf_email__" data-cfemail="deacbbbfbaa7ecb2bfbdbbabae9eb9b3bfb7b2f0bdb1b3">[email&#160;protected]</span></a>
                         </div>
                         <div class="contact-item">
                             <svg viewBox="0 0 24 24" fill="currentColor">
@@ -361,7 +352,7 @@
                         <h3>Ready to Connect?</h3>
                         <p>Click the button below to send us an email directly, or use one of the contact methods on the left.</p>
                     </div>
-                    <a href="mailto:ready2laceup@gmail.com" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
+                    <a href="/cdn-cgi/l/email-protection#6d1f080c09145f010c0e08181d2d0a000c0401430e0200" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
                         <span>Email Us Now</span>
                         <div class="btn-glow"></div>
                     </a>
@@ -397,9 +388,4 @@
                             <li><a href="#get-involved">Volunteer</a></li>
                             <li><a href="#get-involved">Partner</a></li>
                             <li><a href="#contact">Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 LACE UP Foundation. All rights reserve
+                      
