--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                             </svg>
-                            <a href="/cdn-cgi/l/email-protection#2c5e494d48551e404d4f49595c6c4b414d4540024f4341"><span class="__cf_email__" data-cfemail="deacbbbfbaa7ecb2bfbdbbabae9eb9b3bfb7b2f0bdb1b3">[email&#160;protected]</span></a>
+                            <!--email_off--><a href="mailto:ready2laceup@gmail.com">ready2laceup@gmail.com</a><!--/email_off-->
                         </div>
                         <div class="contact-item">
                             <svg viewBox="0 0 24 24" fill="currentColor">
@@ -352,7 +352,7 @@
                         <h3>Ready to Connect?</h3>
                         <p>Click the button below to send us an email directly, or use one of the contact methods on the left.</p>
                     </div>
-                    <a href="/cdn-cgi/l/email-protection#6d1f080c09145f010c0e08181d2d0a000c0401430e0200" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;">
+                    <!--email_off--><a href="mailto:ready2laceup@gmail.com" class="btn btn-primary" style="display: inline-block; text-align: center; width: 100%; max-width: 300px; margin: 2rem auto; text-decoration: none;"><!--/email_off-->
                         <span>Email Us Now</span>
                         <div class="btn-glow"></div>
                     </a>
